# VISIR-Backend

./: .env.example  .gitignore  .pre-commit-config.yaml  ANALISIS_ENDPOINT_CARGAR.md  Dockerfile  Makefile  README.md  ReadmiLocal.md  _cfdi_v40_egreso_comercio_minorista_021.xml  catalogos.py  cfdi_ejemplo.xml  cfdi_ejemplo_cfdis.json  cfdi_ejemplo_ocr.txt  cfdi_v40_egreso_comercio_minorista_021_cfdis.json  cfdi_v40_egreso_comercio_minorista_021_ocr.txt  docker-compose.yml  llm_extractor.py  ocr_paddle.py  ocr_preprocess.py  pipeline.py  practica.py  pyproject.toml  requirements.txt  schema.py  update_documents_service.py  xml_parser.py
.github/workflows/: cd.yml  ci.yml
app/: main.py
app/core/: auth.py  config.py  database.py  dependencies.py  logging.py
app/repositories/: auth_repository.py  documents_repository.py  extracciones_repositories.py  extracciones_repository.py
app/routers/: auth_router.py  documents_router.py  extracciones_router.py  ia_router.py  ingest_router.py  test_supabase.py
app/schemas/: auth.py  auth_schema.py  campos_cfdi.py  consulta.py  documents_schema.py  extraccion.py  ingest.py  schema_extraccion.py  user_schema.py  usuarios_schema.py
app/services/: auth_service.py  documents_service.py  extracciones_service.py  helper.py  org_ingestion_service.py  rag_service.py
app/services/Extraccion/: catalogos.py  llm_extractor.py  ocr_paddle.py  ocr_preprocess.py  pipeline.py  texto_utils.py  xml_parser.py
app/services/Extraccion/xml_parser/: REPORTE.md  xml_parser.py
app/services/Extraccion/xml_parser/complementos/: addenda.py  carta_porte.py  comercio_exterior.py  ine.py  leyendas_fiscales.py  nomina.py  pagos.py
data/: Anexo-8-RMF-2026_DOF-28122025_limpio.yaml  Anexo_1A_RMF_2025_Tramites_v2.yaml  Anexo_20_Guia_Llenado_CFDI_v4_v2.yaml  Anexo_7_RMF2026-09012026_limpio.yaml  Documentacion_Tecnica_CFDI_limpio.yaml  El_ABC_personas_contribuyentes_v2.yaml  Guia_Complemento_Pagos_v2_limpio.yaml  Guia_del_pago_provisional_del_ISR_Regimen_Simplificado_de_Confianza_529e54db8d_limpio.yaml  Guia_llenado_CFDI_global_limpio.yaml  Guiallenado_ISR_RESICO_Ejer_y_Term_Ant_VF_26122025_REV_2_434473cdda_limpio.yaml  Guiallenado_ISR_RESICO_Liq_y_Ultima_Ej_Liq_VF_19dic2025_REV_00e11955d3_limpio.yaml  Preguntas_frecuentes_VF_12012025_REV_1a8b1a706f_limpio.yaml  RMF_2026_Completa_limpio.yaml  complementos.md  libro_regimen_limpio.yaml  metodos-pago.md  rfc-generico.md  tipos-comprobante.md  topic_seed.md
docs/: 01_Arquitectura.md  02_Configuracion.md  02_Configuración.md  03_Docker.md  04_Endpoints.md  ER.md  README.md
evaluaciones/: juez.py  metricas.py  reporte.py  run_eval.py
evaluaciones/data/: eval_dataset.json
evaluaciones/prompts/: fidelidad.txt  relevancia.txt
ingestion/: chunker.py  loader.py  pipeline.py  run.py
migrations/: 20260519140000_create_organizaciones.sql  20260519140000_create_organizations.sql  20260519140001_create_roles.sql  20260519140002_create_categorias.sql  20260519140002_create_usuarios.sql  20260519140003_create_documentos.sql  20260519140003_create_usuarios.sql  20260519140004.emisores.sql  20260519140004_create_emisores.sql  20260519140004_create_extracciones.sql  20260519140005FormaPago.sql  20260519140005_create_categorias.sql  20260519140005_create_conversaciones.sql  20260519140005_create_formas_pago.sql  20260519140006_create_documentos.sql  20260519140006_create_receptores.sql  20260519140006_rls_policies.sql  20260519140007_create_extracciones.sql  20260519140007_create_formas_pago.sql  20260519140008_create_conversaciones.sql  20260519140008_create_documentos.sql  20260519140009_create_conversaciones.sql  20260519140009_rls_policies.sql  2026051914000_create_receptores.sql  20260519140010_create_extracciones.sql  20260519140011_rls_policies.sql  20260519140012_seed_data.sql  20260520140007_seed_data.sql  20260604230000_trigger_user.sql  20260610100001_create_tipos_comprobantes.sql
rag/: __init__.py  chain.py  config.py  embeddings.py  hasher.py  retriever.py  store.py
tests/: configtest.py  conftest.py  test_documentos.py  test_health.py
validation_results/: eval_completo_20260611_210512.json  eval_completo_20260611_210512.md  validation_20260610_140129.json
