[project]
name = "visir-api"
version = "0.2.0"
description = "ERP inteligente VISIR — API · RAG Fiscal · ChromaDB · Supabase"
readme = "README.md"
requires-python = ">=3.12, < 3.13"

dependencies = [
    # ── HTTP y FastAPI ────────────────────────────────────────────────────────
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.29",
    "supabase>=2.30.0",
    "uvicorn>=0.47.0",

    # ── Extracción de CFDIs — OCR + LLM (módulo Extraccion/) ─────────────────
    "numpy==1.26.4",
    "paddlepaddle==3.2.1",
    "paddleocr==3.5.0",
    "PyMuPDF==1.27.2.3",
    "opencv-python==4.11.0.86",
    "Pillow==11.1.0",
    "mistralai==2.4.5",

    # ── ChromaDB — vector store ───────────────────────────────────────────────
    "chromadb>=0.5.0",

    # ── Fix: protobuf 5.x/6.x rompe chromadb/opentelemetry en runtime ────────
    "protobuf>=3.20.0,<5.0.0",

    # ── Embeddings (cliente HTTP OpenAI-compatible) ───────────────────────────
    "requests>=2.31.0",

    # ── LlamaIndex — chunking semántico e interfaz BaseEmbedding ─────────────
    "llama-index-core>=0.10.0",
    "pymupdf4llm>=0.0.17",
    "tqdm>=4.66.0",

    # ── LangChain / LangGraph — cadena RAG + máquina de estados con LLM ──────
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.2.0,<1.0", 
    "langgraph>=0.2.0",

    # ── Utilidades ────────────────────────────────────────────────────────────
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "C4", "SIM", "ASYNC", "RUF",
]
ignore = [
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pydantic-mypy]
init_typed = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app", "rag", "ingestion"]